--- a/.github/workflows/autoWakeup.yml
+++ b/.github/workflows/autoWakeup.yml
@@ -10,7 +10,7 @@ on:
   #  branches: 
   #    - master
   schedule:
-    - cron: "*/60 0-15 * * *"
+    - cron: "* 0-15/2 * * *"
   watch:
     types: [started]
    
